# gwsm_git

./: .gitignore  .gitmodules  Cargo.toml  README.md
bab/: Cargo.toml
bab/src/: enotify.rs  lib.rs  runext.rs
rgwsm_git/: Cargo.toml  rgwsm_git.xpm
rgwsm_git/src/: action_icons.rs  branches.rs  commit.rs  config.rs  diff.rs  edit.rs  events.rs  exec.rs  fs_db.rs  icon.rs  index_file_tree.rs  main.rs  message.rs  remotes.rs  repos.rs  stashes.rs  submodules.rs  tags.rs  ws_file_tree.rs
xpms/: branch.xpm  diff.xpm
