[package]
name = "rgwsm_git"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crypto-hash = "0.3.3"
git2 = "0.8.0"
ignore = "0.4.6"
lazy_static = "0.2.8"
regex = "0.2"
shlex = "0.1.1"

gdk-pixbuf = "0.6.0"
gio = "0.6.0"
glib = "0.7.0"
gtk = "0.6.0"
pango-sys = "0.8.0"

cub_diff_lib = { path = "../../../CRATES/rs_cub_diff_lib.git"}
cub_diff_gui_lib = { path = "../../../CRATES/rs_cub_diff_gui_lib.git"}
pw_gix = { path = "../../../CRATES/rs_pw_gix.git" }
pw_pathux = { path = "../../../CRATES/rs_pw_pathux.git" }
