[package]
name = "rgwsm_git"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crypto-hash = "0.3.3"
git2 = "0.16.1"
glob = "0.3.0"
ignore = "0.4.6"
lazy_static = "1.4.0"
regex = "1.0"
serde_json = "1.0.39"
shlex = "1.3"
xml-rs = "0.8.0"

cub_diff_lib = { git = "https://github.com/pwil3058/rs_cub_diff_lib.git"}
cub_diff_lib_gtk = { git = "https://github.com/pwil3058/rs_cub_diff_lib.git"}
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
#pw_gix = { path = "/home/peter/SRC/GITHUB/RUST/CRATES/rs_pw_gix.git/pw_gix"}
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
